# lwgeom-utils

./: CMakeLists.txt
CMakeModules/: FindLWGEOM.cmake
apps/: CMakeLists.txt  fixup.cpp  make_valid.cpp  segmentize.cpp
src/: CMakeLists.txt  lwgeomutils_config.h.in
src/postgis/: CMakeLists.txt  geography.sql.h  geography_inout.cpp  geography_measurement.cpp  lwgeom_functions_basic.cpp  lwgeom_geos.cpp  lwgeom_transform.cpp  postgis.h  postgis.sql.h
