
file( GLOB HEADERS RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "*.h" )
file( GLOB SOURCES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "*.cpp" )

set( TARGET_NAME postgis )
set( TARGET_VERSION ${${CMAKE_PROJECT_NAME}_VERSION} )
set( TARGET_EXPORT ${CMAKE_PROJECT_NAME}Targets )
set( TARGET_CATEGORY Lib )
set( PRIVATE_HEADERS ${HEADERS} )
set( PUBLIC_HEADERS ${HEADERS} )
set( PRIVATE_SOURCES ${SOURCES} )
set( INCDIR_NAME "postgis" )

add_definitions( -DLWGEOMUTILS_LIBRARY )

add_library( ${TARGET_NAME} SHARED ${PRIVATE_SOURCES} ${PRIVATE_HEADERS} )
target_include_directories( ${TARGET_NAME} PUBLIC
  ${CMAKE_SOURCE_DIR}/src
  ${LWGEOM_INCLUDE_DIR}
  ${GEOS_INCLUDE_DIR}
  ${PROJ_INCLUDE_DIR}
  ${SQLite3_INCLUDE_DIRS} )
target_link_libraries( ${TARGET_NAME}
  ${LWGEOM_LIBRARY}
  ${GEOS_LIBRARY}
  ${PROJ_LIBRARY}
  ${SQLite3_LIBRARIES} )

include( ModuleInstall )
